# ir_plane_tracker

./: pyproject.toml
examples/: live_usb.py
examples/resources/: params_hddigital.json
src/pupil_labs/ir_plane_tracker/: tracker.py
